# CS415

./: .env  Cargo.toml  README.md  database
src/: card.rs  data.rs  main.rs  routes.rs
static/: buttons.js  game.js  index.js
templates/: 400.html  404.html  500.html  base.html  gamble.html  game.html  home.html  index.html  login.html  modify.html
