[package]
name = "prototype1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["ws"] }
axum-extra = { version = "0.4", features = ["spa"] }
tokio = { version = "1.24.1", features = ["full"] }
tera = "1"
once_cell="1"
fastrand = "1"
tower-http = { version = "0.3.5", features = ["catch-panic"] }
